--- a/educacion.html
+++ b/educacion.html
@@ -22,54 +22,58 @@
 			<h3>27 de mayo de 1987</h3>
 			<h2>Lugar de Nacimiento</h2>
 			<h3>Villanueva La Guajira</h3>
-			<a href="index.html">Inicio</a><br/>
-			<a href="educacion.html">Educacion</a><br/>
-			<a href="experiencia.html">Experiencia</a><br/>
-			<h2>Educacion</h2>
-			<table border="1" cellpadding="5" cellspacing="1" >
-				<thead>
-					<tr>
-						<th>Año</th>
-						<th>Institucion</th>
-						<th>Lugar</th>
-						<th>¿Culmino?</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>2003</td>
-						<td>Institucion de Promocion Social del Sur</td>
-						<td>Villanueva La Guajira</td>
-						<td>Si</td>
-					</tr>
-					<tr>
-						<td>2008</td>
-						<td>Ingeniero de Sistema</td>
-						<td>Valledupar Cesar</td>
-						<td>Si</td>
-					</tr>
-					<tr>
-						<td>2014</td>
-						<td>Bases de Datos</td>
-						<td>Virtual</td>
-						<td>No</td>
-					</tr>
-				</tbody>
-			</table>
-			<h2>Agregar Estudios</h2>
-			<form>
-				<label for="año">Año:</label><br/>
-				<select >
-					<option>2016</option>
-				</select><br/>
-				<label for="institucion">Institucion</label><br/>
-				<input type="text" name="institucion" required><br/>
-				<label for="lugar">Lugar:</label><br/>
-				<textarea name="lugar" rows="2" cols="22" ></textarea><br/>
-				<input type="submit" name="enviar" value="Enviar">
-			</form>
+			<nav>
+				<a href="index.html">Inicio</a><br/>
+				<a href="educacion.html">Educacion</a><br/>
+				<a href="experiencia.html">Experiencia</a><br/>
+			</nav>
+			<section>
+				<h2>Educacion</h2>
+				<table border="1" cellpadding="5" cellspacing="1" >
+					<thead>
+						<tr>
+							<th>Año</th>
+							<th>Institucion</th>
+							<th>Lugar</th>
+							<th>¿Culmino?</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>2003</td>
+							<td>Institucion de Promocion Social del Sur</td>
+							<td>Villanueva La Guajira</td>
+							<td>Si</td>
+						</tr>
+						<tr>
+							<td>2008</td>
+							<td>Ingeniero de Sistema</td>
+							<td>Valledupar Cesar</td>
+							<td>Si</td>
+						</tr>
+						<tr>
+							<td>2018</td>
+							<td>Desarrollo Web</td>
+							<td>Virtual</td>
+							<td>No</td>
+						</tr>
+					</tbody>
+				</table>
+				<h2>Agregar Estudios</h2>
+				<form>
+					<label for="año">Año:</label><br/>
+					<select >
+						<option>2016</option>
+					</select><br/>
+					<label for="institucion">Institucion</label><br/>
+					<input type="text" name="institucion" required><br/>
+					<label for="lugar">Lugar:</label><br/>
+					<textarea name="lugar" rows="2" cols="22" ></textarea><br/>
+					<input type="submit" name="enviar" value="Enviar">
+				</form>
+			</section>
 		<footer>
-			Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15
+			<p>Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15</p>
 		</footer>
 	</body>
 </html>
