--- a/experiencia.html
+++ b/experiencia.html
@@ -20,17 +20,20 @@
 			<h3>27 de mayo de 1987</h3>
 			<h2>Lugar de Nacimiento</h2>
 			<h3>Villanueva La Guajira</h3>
-			<a href="index.html">Inicio</a><br/>
-			<a href="educacion.html">Educacion</a><br/>
-			<a href="experiencia.html">Experiencia</a><br/>
-			<h2>Experiencia</h2>
-			<h3>Habilidades e Intereses Profesionales</h3>
-			<video controls width="" height=""> </video>
-			<h3>Tiempo Libre</h3>
-			<audio controls> </audio>
-			
+			<nav>
+				<a href="index.html">Inicio</a><br/>
+				<a href="educacion.html">Educacion</a><br/>
+				<a href="experiencia.html">Experiencia</a><br/>
+			</nav>
+			<section>
+				<h2>Experiencia</h2>
+				<h3>Habilidades e Intereses Profesionales</h3>
+				<video controls width="" height=""> </video>
+				<h3>Tiempo Libre</h3>
+				<audio controls> </audio>
+			</section>
 		<footer>
-			Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15
+			<p>Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15</p>
 		</footer>
 	</body>
 </html>
