--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="Autor" content="Jose Suarez">
-		<title>Evaluacion Final HTML</title>
+		<title>Informacion Personal</title>
 	</head>
 	<body>
 		<header>
 			<svg width="110px" height="40px" viewBox="0 0 110 40">
-				<image xLink:href="imagenes/logoSVG.svg" height="40px" width="110px"></image>
+				<image xLink:href="imagenes/logoSVG.svg" height="40px" width="110px" />
 			</svg>
 			<h1>Hoja de Vida</h1>
 		</header>
@@ -20,20 +20,33 @@
 			<h3>27 de mayo de 1987</h3>
 			<h2>Lugar de Nacimiento</h2>
 			<h3>Villanueva La Guajira</h3>
-			<a href="index.html">Inicio</a><br/>
-			<a href="educacion.html">Educacion</a><br/>
-			<a>Experiencia</a><br/>
-			<h2>Informacion Personal</h2>
-			<img src="">
-			<p>
-				Soy ingeniero de sistemas con capacidades
-				<ul>
-					<li>Español</li>
-					<li>Ingles</li>
-				</ul>
-			</p>
+			<nav>
+				<a href="index.html">Inicio</a><br/>
+				<a href="educacion.html">Educacion</a><br/>
+				<a href="experiencia.html">Experiencia</a><br/>
+			</nav>
+			<section>
+				<h2>Informacion Personal</h2>
+				<img src="imagenes/joseSuarez.jpg" height="120px" width="100px">
+				<p>
+					Ingeniero de sistemas con capacidad de diseñar soluciones informáticas aplicables a áreas
+					administrativas, técnicas y sociales. Con interés en áreas de sistemas como el desarrollo de
+					aplicaciones, sistemas de información, sistemas de inteligencia de negocios, bases de datos.
+					Con capacidad de recibir y transmitir conocimientos asociados a diferentes áreas de la
+					Ingeniería de Sistemas. Buen manejo de las relaciones interpersonales, capacidad de trabajo en
+					equipo y gran sentido de responsabilidad.
+					Con conocimientos de programación en Java (Java Enterprise, Netbeans y JDeveloper), desarrollo Web en JSP,
+					programación en Visual Basic, diseño y manejo de bases de datos en Oracle, MySQL,
+					PostgresSQL, Ms Access y manejo de lenguaje estándar SQL, diseño de Universos y reportes en
+					Business Objects, conocimientos de arquitectura empresarial y manejo de la herramienta MEGA.
+					<ul>
+						<li>Español</li>
+						<li>Ingles</li>
+					</ul>
+				</p>
+			</section>
 		<footer>
-			Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15
+			<p>Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15</p>
 		</footer>
 	</body>
 </html>
