--- a/experiencia.html
+++ b/experiencia.html
@@ -28,9 +28,9 @@
 			<section>
 				<h2>Experiencia</h2>
 				<h3>Habilidades e Intereses Profesionales</h3>
-				<video controls width="" height=""> </video>
+				<video src="media/habilidadesProfesionales.mov" controls width="400px" height="400px" preload="auto" poster="media/error.jsp"> </video>
 				<h3>Tiempo Libre</h3>
-				<audio controls> </audio>
+				<audio src="media/tiempoLibre.m4a" controls preload="auto"> </audio>
 			</section>
 		<footer>
 			<p>Correo:josesuarez27@me.com Telefono:3004750686 Direccion:Carrera 15a N. 5a - 15</p>
